[package]
name = "psdtool_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
bitflags = "1.*"
urlencoding = "2.1.0"
regex = "1.5.4"
raster = "0.2.0"
encoding_rs = "0.8.28"
rand = "0.8.4"
image = "0.23.14"
ya_psd = { git = "https://github.com/White-Green/ya_psd_rs", rev = "32fe8ce176c427050a62e34fe2a4e77aca59ddd9" }
