[package]
name = "psdtool_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psdtool_lib = { path = "../psdtool_lib" }
actix-web = "3.3.2"
serde = "1.0.130"
serde_json = "1.0.67"
serde_derive = "1.0.130"
clap = "2.33.3"
anyhow = "1.0.43"
once_cell = "1.8.0"
image = "0.23.14"
ya_psd = { git = "https://github.com/White-Green/ya_psd_rs", rev = "32fe8ce176c427050a62e34fe2a4e77aca59ddd9" }
